--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
             main {
                 background: rgb(247, 244, 246);
                 display: flex;
+                padding:inherit;
             }
             .sidebar {
                 margin-right: 25px;
@@ -75,6 +76,7 @@
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href ="portfolio.html">Portfolio</a></li>
+                    <li><a href="studies.html">Studies</a><li>
                 </ul>
             </nav>
             
