--- a/portfolio.html
+++ b/portfolio.html
@@ -52,6 +52,7 @@
             main {
                 background: rgb(247, 244, 246);
                 display: flex;
+                padding:inherit;
             }
             .content {
                 flex: 1;
@@ -68,6 +69,7 @@
                 <li><a href="index.html">Home</a>
                 </li>
                 <li><a href="portfolio.html">Portfolio</a>
+                <li><a href="studies.html">Studies</a>
                 </li>
             </ul>
         </nav>
